# nv-maser-twin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: benchmark_inference.py
config/: default.yaml
docs/: ARCHITECTURE.md
docs/adr/: ADR-001-controller-architecture.md  (+31 more)
experiments/: runs.db
notebooks/: exploration.ipynb
scripts/: __init__.py  build_dataset.py  eval_baseline.py  export_onnx.py  halbach_tolerance_study.py  run_sweep.py  show_experiments.py  train_ppo.py  train_rl.py
tests/: _smoke_recon.py  test_amplifier.py  test_api.py  test_artifact_characterizer.py  test_base_field.py  test_bridge.py  test_calibration.py  test_cavity.py  test_checkpoint_meta.py  test_cli.py  test_closed_loop.py  test_coils.py  test_controller.py  test_dataset.py  test_depth_limit_calculator.py  test_depth_profile.py  test_dipolar.py  test_disturbance.py  test_environment.py  test_epg_adapter.py  test_feedback.py  test_field_map.py  test_field_tolerance_calculator.py  test_gain_bandwidth_match.py  test_gain_lock.py  test_grid.py  test_halbach.py  test_integration.py  test_logging.py  test_loss.py  test_lstsq_baseline.py  test_magpylib_adapter.py  test_main.py  test_maser_gain.py  test_maser_gain_frequency.py  test_maxwell_bloch.py  test_mixer_nonlinearity.py  test_mrzero_adapter.py  test_nv_spin.py  test_odmr_simulator.py  (+41 more)
(+86 files in other folders)
